[package]
name        = "cardimage"
version     = "1.0.0"
edition     = "2021"
description = "Fast card pack image generator for Discord"

[[bin]]
name = "cardimage"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio       = { version = "1",  features = ["rt-multi-thread", "macros", "fs"] }
# HTTP client (TLS bundled — no OpenSSL dep on Windows)
reqwest     = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
# JSON parsing
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
# Image compositing
image       = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
imageproc   = "0.25"
# Font rendering for placeholders
ab_glyph    = "0.2"
# CLI argument parsing
clap        = { version = "4", features = ["derive"] }
# Async utilities
futures     = "0.3"
# Error handling
anyhow      = "1"

[profile.release]
opt-level   = 3
lto         = true
codegen-units = 1
strip       = true
